// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileNavItem > should render Expandable MobileNavItem 1`] = `
<DocumentFragment>
  <li
    aria-label="Item 2"
    class="mocked-styled-7 el-mobile-nav-item-list-item"
    data-is-expanded="true"
  >
    <button
      aria-controls="test-static-id"
      aria-current="true"
      aria-expanded="true"
      class="mocked-styled-3 el-mobile-nav-item-expander-button"
      type="button"
    >
      <span
        class="mocked-styled-4 el-mobile-nav-item-content"
      >
        Item 2
        <span
          class="mocked-styled-5 el-mobile-nav-item-badge"
        />
      </span>
      <span
        class="mocked-styled-0 el-icon"
        style="font-size: 16px;"
      >
        <svg
          fill="none"
          height="24"
          role="img"
          style="font-size: 16px;"
          title="Icon image with name chevronUp"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.9948 16.4959C18.7292 16.4974 18.4739 16.3932 18.2853 16.2062L11.9991 9.91315L5.71303 16.2062C5.32115 16.5979 4.68579 16.5979 4.29391 16.2062C3.90203 15.8145 3.90203 15.1795 4.29391 14.7878L11.2896 7.79547C11.4772 7.60637 11.7327 7.5 11.9991 7.5C12.2656 7.5 12.5211 7.60637 12.7087 7.79547L19.7044 14.7878C19.8936 14.9754 20 15.2307 20 15.497C20 15.7634 19.8936 16.0187 19.7044 16.2062C19.5158 16.3932 19.2605 16.4974 18.9948 16.4959Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <ul
      aria-hidden="false"
      class="mocked-styled-6 el-mobile-nav-sub-item-unordered-list"
      id="test-static-id"
    >
      <li
        aria-label="Sub Item 2.1"
        class="mocked-styled-7 el-mobile-nav-item-list-item"
      >
        <a
          aria-current="page"
          class="mocked-styled-1 el-mobile-nav-item-anchor"
          href="#item-2.1"
        >
          <span
            class="mocked-styled-4 el-mobile-nav-item-content"
          >
            Sub Item 2.1
          </span>
        </a>
      </li>
      <li
        aria-label="Sub Item 2.2"
        class="mocked-styled-7 el-mobile-nav-item-list-item"
      >
        <button
          class="mocked-styled-2 el-mobile-nav-item-button"
        >
          <span
            class="mocked-styled-4 el-mobile-nav-item-content"
          >
            Sub Item 2.2
            <span
              class="mocked-styled-5 el-mobile-nav-item-badge"
            />
          </span>
        </button>
      </li>
      <li
        aria-label="Sub Item 2.3"
        class="mocked-styled-7 el-mobile-nav-item-list-item"
      >
        <a
          class="mocked-styled-1 el-mobile-nav-item-anchor"
          href="#item-2.3"
        >
          <span
            class="mocked-styled-4 el-mobile-nav-item-content"
          >
            Sub Item 2.3
          </span>
        </a>
      </li>
    </ul>
  </li>
</DocumentFragment>
`;

exports[`MobileNavItem > should render Simple MobileNavItem 1`] = `
<DocumentFragment>
  <li
    aria-label="Item 1"
    class="mocked-styled-7 el-mobile-nav-item-list-item"
  >
    <a
      class="mocked-styled-1 el-mobile-nav-item-anchor"
      href="#item-1"
    >
      <span
        class="mocked-styled-4 el-mobile-nav-item-content"
      >
        Item 1
      </span>
    </a>
  </li>
</DocumentFragment>
`;

exports[`MobileNavItem > should render Simple MobileNavItem with badge 1`] = `
<DocumentFragment>
  <li
    aria-label="Item 1"
    class="mocked-styled-7 el-mobile-nav-item-list-item"
  >
    <a
      class="mocked-styled-1 el-mobile-nav-item-anchor"
      href="#item-1"
    >
      <span
        class="mocked-styled-4 el-mobile-nav-item-content"
      >
        Item 1
        <span
          class="mocked-styled-5 el-mobile-nav-item-badge"
        />
      </span>
    </a>
  </li>
</DocumentFragment>
`;

exports[`MobileNavItem should render Expandable MobileNavItem 1`] = `
<DocumentFragment>
  <mock-styled.ul
    aria-label="Item 2"
    data-is-expanded="false"
    role="menubar"
  >
    <mock-styled.li
      role="none"
    >
      <mock-styled.button
        aria-controls="test-static-id"
        aria-current="true"
        aria-expanded="false"
        role="menuitem"
        type="button"
      >
        <mock-styled.span>
          Item 2
          <mock-styled.span />
        </mock-styled.span>
        <mock-styled.span
          classname=""
          style="font-size: 16px;"
        >
          <svg
            role="img"
            style="font-size: 16px;"
            title="Icon image with name chevronDown"
          />
        </mock-styled.span>
      </mock-styled.button>
      <mock-styled.ul
        aria-hidden="true"
        id="test-static-id"
        role="menu"
      >
        <mock-styled.li
          role="none"
        >
          <mock-styled.a
            aria-current="page"
            href="#item-2.1"
            role="menuitem"
          >
            <mock-styled.span>
              Sub Item 2.1
            </mock-styled.span>
          </mock-styled.a>
        </mock-styled.li>
        <mock-styled.li
          role="none"
        >
          <mock-styled.a
            href="#item-2.2"
            role="menuitem"
          >
            <mock-styled.span>
              Sub Item 2.2
              <mock-styled.span />
            </mock-styled.span>
          </mock-styled.a>
        </mock-styled.li>
        <mock-styled.li
          role="none"
        >
          <mock-styled.a
            href="#item-2.3"
            role="menuitem"
          >
            <mock-styled.span>
              Sub Item 2.3
            </mock-styled.span>
          </mock-styled.a>
        </mock-styled.li>
      </mock-styled.ul>
    </mock-styled.li>
  </mock-styled.ul>
</DocumentFragment>
`;

exports[`MobileNavItem should render Simple MobileNavItem 1`] = `
<DocumentFragment>
  <mock-styled.ul
    aria-label="Item 1"
    role="menubar"
  >
    <mock-styled.li
      role="none"
    >
      <mock-styled.a
        href="#item-1"
        role="menuitem"
      >
        <mock-styled.span>
          Item 1
        </mock-styled.span>
      </mock-styled.a>
    </mock-styled.li>
  </mock-styled.ul>
</DocumentFragment>
`;

exports[`MobileNavItem should render Simple MobileNavItem with badge 1`] = `
<DocumentFragment>
  <mock-styled.ul
    aria-label="Item 1"
    role="menubar"
  >
    <mock-styled.li
      role="none"
    >
      <mock-styled.a
        href="#item-1"
        role="menuitem"
      >
        <mock-styled.span>
          Item 1
          <mock-styled.span />
        </mock-styled.span>
      </mock-styled.a>
    </mock-styled.li>
  </mock-styled.ul>
</DocumentFragment>
`;
